--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ quarkus.datasource.jdbc.min-size=4
 quarkus.datasource.jdbc.max-size=16
 
 mp.jwt.verify.publickey.location=META-INF/resources/publickey.pem
-mp.jwt.verify.issuer=https://ringesentralen.no
+mp.jwt.verify.issuer=https://roedt.no
 quarkus.smallrye-jwt.enabled=true
 smallrye.jwt.encrypt.key-location=META-INF/resources/publickey.pem
 smallrye.jwt.sign.key-location=META-INF/resources/privatekey.pem
